fix pour relié login register au backend, modif pour que toute le visu d'un user connecté soit grace au backend et plus au localstorage, modif pour que rien ne soit visible et accessible si le user n'est pas connecté, recuperation du username pour les game 1vs et IA, modif du formulaire tournois pour que le nom du user soit dans la premiere case et intouchable, puis modif form login ret register pour pas garder l'ancien input en memoire

--- a/PongGame/styles.css
+++ b/PongGame/styles.css
@@ -162,6 +162,7 @@ button:hover {
 	cursor: pointer;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	transition: transform 0.2s, box-shadow 0.2s;
+	z-index: 1000; /* S'assurer qu'il est au-dessus du canvas */
 }
 
 /* 📌 Conteneur des boutons en haut à droite */
@@ -227,6 +228,7 @@ button:hover {
 	cursor: pointer;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	transition: transform 0.2s, box-shadow 0.2s;
+	z-index: 1000; /* S'assurer qu'il est au-dessus du canvas */
 }
 
 /* Menu déroulant caché par défaut */
@@ -242,6 +244,7 @@ button:hover {
 	width: 185px;
 	border: 5px solid #f9d3d9; /* Bordure kawaii */
 	border-radius: 15px;
+	z-index: 1000; /* S'assurer qu'il est au-dessus du canvas */
 }
 
 .menu-dropdown a {
